// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test auth reducer snapshots changeCoordinatesMark 1`] = `undefined`;

exports[`test auth reducer snapshots changeSortMark 1`] = `
Array [
  Object {
    "coordinates": Array [
      55.796702547976345,
      37.782572021483865,
    ],
    "id": "ggg88",
    "name": "Это метка1",
  },
  Object {
    "coordinates": Array [
      55.67938453142209,
      37.47520507812455,
    ],
    "id": "lllsss7",
    "name": "Это метка2",
  },
]
`;

exports[`test auth reducer snapshots deleteMark 1`] = `
Array [
  Object {
    "coordinates": Array [
      55.67938453142209,
      37.47520507812455,
    ],
    "id": "lllsss7",
    "name": "Это метка2",
  },
  Object {
    "coordinates": Array [
      55.796702547976345,
      37.782572021483865,
    ],
    "id": "ggg88",
    "name": "Это метка1",
  },
]
`;

exports[`test auth reducer snapshots initial state 1`] = `
Array [
  Object {
    "coordinates": Array [
      55.67938453142209,
      37.47520507812455,
    ],
    "id": "lllsss7",
    "name": "Это метка2",
  },
  Object {
    "coordinates": Array [
      55.796702547976345,
      37.782572021483865,
    ],
    "id": "ggg88",
    "name": "Это метка1",
  },
]
`;

exports[`test auth reducer snapshots setNewMark 1`] = `
Array [
  Object {
    "coordinates": Array [
      55.67938453142209,
      37.47520507812455,
    ],
    "id": "lllsss7",
    "name": "Это метка2",
  },
  Object {
    "coordinates": Array [
      55.796702547976345,
      37.782572021483865,
    ],
    "id": "ggg88",
    "name": "Это метка1",
  },
  Object {
    "coordinates": Array [
      55.76,
      37.64,
    ],
    "id": 777,
    "name": "новая метка 666",
  },
]
`;
